@@ -1,3 +1,8 @@
+2006-02-16  Per Bothner  <per@bothner.com>
+
+	* AttributeType.java: Fix tabs/spacing to PreProcess works properly,
+	* ElementType.java: Likewise.
+
 2006-02-05  Per Bothner  <per@bothner.com>
 
 	* WriteTo.java (writeToIfChange): New static method and field.
